<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/contactsFragment"
        android:icon="@drawable/ic_contacts"
        android:title="@string/contacts_page_title" />

    <item
        android:id="@+id/eventFragment"
        android:icon="@drawable/ic_event"
        android:title="@string/event_page_title" />

    <item
        android:id="@+id/serviceFragment"
        android:icon="@drawable/ic_service"
        android:title="@string/service_page_title" />

    <item
        android:id="@+id/notificationFragment"
        android:icon="@drawable/ic_notification"
        android:title="@string/notification_page_title" />

    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile_page_title" />
</menu>