<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        style="@style/AuthTextDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"
        android:text="@string/phone_page_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/et_country_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing_small_8"
        android:backgroundTint="@color/colorWhite"
        android:text="@string/default_country_code"
        app:layout_constraintBottom_toTopOf="@id/divider_bottom_of_filed"
        app:layout_constraintEnd_toStartOf="@id/divider_code_and_phone"
        app:layout_constraintStart_toStartOf="@id/divider_bottom_of_filed" />

    <View
        android:id="@+id/divider_code_and_phone"
        android:layout_width="1dp"
        android:layout_height="22dp"
        android:background="@color/colorHintText"
        app:layout_constraintBottom_toBottomOf="@id/et_country_code"
        app:layout_constraintEnd_toStartOf="@id/et_phone_number"
        app:layout_constraintStart_toEndOf="@id/et_country_code"
        app:layout_constraintTop_toTopOf="@id/et_country_code" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/et_phone_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing_small_8"
        android:backgroundTint="@color/colorWhite"
        android:hint="@string/your_phone_number"
        android:inputType="phone|number"
        android:maxLength="14"
        android:lines="1"
        app:layout_constraintBottom_toTopOf="@id/divider_bottom_of_filed"
        app:layout_constraintEnd_toEndOf="@id/divider_bottom_of_filed"
        app:layout_constraintStart_toEndOf="@id/divider_code_and_phone" />

    <View
        android:id="@+id/divider_bottom_of_filed"
        style="@style/AuthPageDivider"
        app:layout_constraintBottom_toTopOf="@id/btn_next_to_verification"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_next_to_verification"
        style="@style/AuthButton"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>