<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.auth.EnterNameFragment">

    <TextView
        style="@style/AuthTextDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"
        android:text="@string/what_is_your_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/et_verification_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing_small_8"
        android:backgroundTint="@color/colorWhite"
        android:hint="@string/your_name"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@id/divider_bottom_of_filed"
        app:layout_constraintEnd_toEndOf="@id/divider_bottom_of_filed"
        app:layout_constraintStart_toStartOf="@id/divider_bottom_of_filed" />

    <View
        android:id="@+id/divider_bottom_of_filed"
        style="@style/AuthPageDivider"
        app:layout_constraintBottom_toTopOf="@id/btn_next_to_upload_photo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_next_to_upload_photo"
        style="@style/AuthButton"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>