<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.addservice.CreateServiceFragment">

    <ImageButton
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_normal_16"
        android:layout_marginTop="@dimen/spacing_normal_16"
        android:background="@drawable/ic_arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_add_service_page_title"
        style="@style/PageTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_normal_16"
        android:text="@string/add_service_page_title"
        app:layout_constraintBottom_toBottomOf="@id/btn_back"
        app:layout_constraintStart_toEndOf="@id/btn_back"
        app:layout_constraintTop_toTopOf="@id/btn_back" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_category"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing_normal_16"
        android:layout_marginTop="@dimen/spacing_large_24"
        android:hint="@string/service_sphere"
        android:labelFor="@id/atv_category"
        app:layout_constraintTop_toBottomOf="@id/tv_add_service_page_title">

        <AutoCompleteTextView
            android:id="@+id/atv_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:cursorVisible="false"
            android:inputType="text" />
        <!--<Spinner
            android:id="@+id/spinner_service_sphere"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:backgroundTint="@color/colorSecondaryText"
            android:gravity="center"
            android:spinnerMode="dialog" />-->
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_profession"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing_normal_16"
        android:layout_marginTop="@dimen/spacing_large_24"
        android:hint="@string/profession"
        android:labelFor="@id/atv_profession"
        app:layout_constraintTop_toBottomOf="@id/til_category">

        <AutoCompleteTextView
            android:id="@+id/atv_profession"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:cursorVisible="false"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_description"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing_normal_16"
        android:layout_marginTop="@dimen/spacing_large_24"
        android:hint="@string/description"
        app:layout_constraintTop_toBottomOf="@id/til_profession">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top|start"
            android:inputType="textMultiLine"
            android:minHeight="160dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_gallery"
        style="@style/ButtonWithIcon"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="@dimen/spacing_normal_16"
        android:layout_marginTop="@dimen/spacing_huge_32"
        android:layout_marginEnd="@dimen/spacing_tiny_4"
        android:layout_marginBottom="@dimen/spacing_large_24"
        android:text="@string/gallery"
        app:icon="@drawable/ic_round_photo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_publish"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_description"
        app:layout_constraintVertical_bias="0.9" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_publish"
        style="@style/ButtonWithIcon"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="@dimen/spacing_tiny_4"
        android:layout_marginTop="@dimen/spacing_huge_32"
        android:layout_marginEnd="@dimen/spacing_normal_16"
        android:layout_marginBottom="@dimen/spacing_large_24"
        android:text="@string/publish"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@id/btn_gallery"
        app:layout_constraintTop_toBottomOf="@+id/til_description"
        app:layout_constraintVertical_bias="0.9" />

</androidx.constraintlayout.widget.ConstraintLayout>