<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.profile.ProfileFragment">

    <ImageButton
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_normal_16"
        android:layout_marginTop="@dimen/spacing_normal_16"
        android:background="@drawable/ic_arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_profile_page_title"
        style="@style/PageTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_page_title"
        android:layout_marginStart="@dimen/spacing_normal_16"
        app:layout_constraintBottom_toBottomOf="@id/btn_back"
        app:layout_constraintStart_toEndOf="@id/btn_back"
        app:layout_constraintTop_toTopOf="@id/btn_back" />

    <ImageView
        android:id="@+id/iv_user_avatar"
        android:layout_width="78dp"
        android:layout_height="78dp"
        android:layout_marginTop="@dimen/spacing_normal_16"
        android:src="@drawable/ic_default_avatar"
        android:layout_marginStart="@dimen/spacing_normal_16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_profile_page_title" />

    <TextView
        android:id="@+id/tv_user_name"
        style="@style/Subtitle"
        android:layout_marginStart="@dimen/spacing_normal_16"
        app:layout_constraintBottom_toTopOf="@id/btn_contact"
        app:layout_constraintStart_toEndOf="@id/iv_user_avatar"
        app:layout_constraintTop_toTopOf="@id/iv_user_avatar"
        app:layout_constraintVertical_chainStyle="packed"
        tools:text="Some name here" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_contact"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="@dimen/spacing_normal_16"
        android:layout_marginTop="@dimen/spacing_tiny_4"
        android:backgroundTint="@color/colorPrimaryDark"
        android:text="@string/contact_with_someone"
        android:textSize="12sp"
        app:cornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="@id/iv_user_avatar"
        app:layout_constraintStart_toEndOf="@id/iv_user_avatar"
        app:layout_constraintTop_toBottomOf="@+id/tv_user_name"
        app:layout_constraintVertical_chainStyle="packed"/>

    <TextView
        android:id="@+id/tv_active_service_subtitle"
        style="@style/Subtitle"
        android:layout_marginTop="@dimen/spacing_large_24"
        android:text="@string/user_services"
        android:layout_marginStart="@dimen/spacing_normal_16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_user_avatar" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_profile_services"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_normal_16"
        app:layout_constraintTop_toBottomOf="@id/tv_active_service_subtitle"
        tools:itemCount="5"
        android:paddingHorizontal="@dimen/spacing_normal_16"
        android:clipToPadding="false"
        tools:listitem="@layout/item_profile_services" />
</androidx.constraintlayout.widget.ConstraintLayout>